      scsi-core-modules to the powerpc 2.6 cdrom initrds. Should actually
      work now.
    - Add pcmcia udebs to powerpc net_drivers floppy.
    - Move $(TREE)/usr/lib/kernel-image-$(KERNELVERSION) out of the way to
      $(TEMP)/lib when building boot images. powerpc subarchitectures that
      need to use mkvmlinuz should now be able to do so.
  * Joey Hess
    - Split out a new cyrllic root floppy on i386 as the regular root floppy
      is full again.
    - Fix stats for images without kernels.
  * Joshua Kwan
    - Fix sparc64 CDs for good. I think.
  * Steve Langasek
    - Add shaped Arabic characters to the needed-characters set
  * Goswin von Brederlow
    - Update amd64 kernel version, and input-modules are now compiled in.
      Closes: #253536

 -- Colin Watson <cjwatson@debian.org>  Mon, 31 May 2004 22:14:32 -0300

debian-installer (20040528) unstable; urgency=low

  * Martin Michlmayr
    - Include bogl-bterm-udeb on the arm netboot image again.
  * Colin Watson
    - Add fs-common-modules to powerpc 2.6 initrds; isofs.ko needs it.

 -- Joey Hess <joeyh@debian.org>  Fri, 28 May 2004 17:52:25 -0400

debian-installer (20040527) unstable; urgency=low

  * Colin Watson
    - Bump powerpc 2.6 kernels to 2.6.6.
    - Add pcmcia-cs, pcmcia-modules, and pcmcia-storage-modules to the
      powerpc cdrom initrd so that hw-detect finds my wireless network card.
    - Add powerpc, power3, power4, and g5 2.6 cdrom images.
    - Move yaboot up from /install/powermac/ to /install/, in line with
      debian-cd.
  * Kurt Roeckx
    - Add amd64 support based on i386.  Only uses 2.6 kernels.
  * Stephen R. Marenka
    - m68k: initrd is over 10MB, so bump up to 13MB.
    - m68k: drop eject-udeb from pkg-lists to solve build problems.
  * Joey Hess
    - Switch boot logo back to the klowner one, the new logo confused some
      users who conused it with screen display problems.

 -- Joey Hess <joeyh@debian.org>  Thu, 27 May 2004 08:18:33 -0400
