@@ -232,6 +232,7 @@ MISC
   This copies files to the destination directory of your configuration.
 
 MANIFEST-INITRD
+MANIFEST-INITRD_LIST
 MANIFEST-KERNEL
 MANIFEST-BOOT
 MANIFEST-ROOT
@@ -244,6 +245,7 @@ MANIFEST-MISC
   directory. 
 
 TEMP_INITRD
+TEMP_INITRD_LIST
 TEMP_KERNEL
 TEMP_BOOT
 TEMP_ROOT
